client/resources/qrunesScripts/qcode/qcodeParser.py
# Generated from qcode.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class qcodeParser ( Parser ):

    grammarFileName = "qcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"'", "'''", "'Pi'", "'let'", "'include'", 
                     "'int'", "'float'", "'boolean'", "'if'", "'else'", 
                     "'for'", "'.lib'", "'.inc'", "'.qrunes'", "'var'", 
                     "'double'", "'len'", "'host'", "'qvec'", "'qubit'", 
                     "'cvec'", "'cbit'", "'H'", "'X'", "'NOT'", "'T'", "'S'", 
                     "'Y'", "'Z'", "'X1'", "'Y1'", "'Z1'", "'U4'", "'RX'", 
                     "'RY'", "'RZ'", "'CNOT'", "'CZ'", "'CR'", "'CU'", "'iSWAP'", 
                     "'Measure'", "'qif'", "'qwhile'", "'qelse'", "'#'", 
                     "'='", "'>'", "'<'", "'!'", "'~'", "':'", "'=='", "'<='", 
                     "'>='", "'!='", "'&&'", "'||'", "'&'", "'^'", "'|'", 
                     "'?'", "'++'", "'--'", "'+'", "'-'", "'*'", "'**'", 
                     "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", "'<<'", 
                     "'>>'", "'{'", "'}'", "';'", "','", "'.'", "'('", "')'", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "PI", "LET", 
                      "INCLUDE", "INT", "FLOAT", "BOOLEAN", "IF", "ELSE", 
                      "FOR", "LIB_POSTFIX", "INC_POSTFIX", "QRUNES_POSTFIX", 
                      "VAR", "DOUBLE", "LEN", "HOST", "QVEC", "QUBIT", "CVEC", 
                      "CBIT", "H_GATE", "X_GATE", "NOT_GATE", "T_GATE", 
                      "S_GATE", "Y_GATE", "Z_GATE", "X1_GATE", "Y1_GATE", 
                      "Z1_GATE", "U4_GATE", "RX_GATE", "RY_GATE", "RZ_GATE", 
                      "CNOT_GATE", "CZ_GATE", "CR_GATE", "CU_GATE", "ISWAP", 
                      "MEASURE", "QIF", "QWHILE", "QELSE", "SHARP_SIGN", 
                      "ASSIGN", "GT", "LT", "BANG", "TILDE", "COLON", "EQUAL", 
                      "LE", "GE", "NOTEQUAL", "LOGIC_AND", "LOGIC_OR", "AND", 
                      "EXCLU", "INCLU", "QUE_MARK", "INC", "DEC", "ADD", 
                      "SUB", "MUL", "POW", "DIV", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "LSHIFT", "RSHIFT", "LBRACE", 
                      "RBRACE", "SEMI", "COMMA", "DOT", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "Identifier", "Constant", "Digit_Sequence", 
                      "WhiteSpace", "SingleLineComment", "MultiLinesComment" ]

    RULE_qrunes = 0
    RULE_lang_unit = 1
    RULE_include_declaration = 2
    RULE_include_sign = 3
    RULE_postfix = 4
    RULE_declaration = 5
    RULE_literal_declaration = 6
    RULE_declaration_Specifier = 7
    RULE_literal_type = 8
    RULE_primary_type = 9
    RULE_quantum_type = 10
    RULE_assist_classical_type = 11
    RULE_init_DeclaratorList = 12
    RULE_init_Literal_DeclaratorList = 13
    RULE_init_Declarator = 14
    RULE_init_Literal_Declarator = 15
    RULE_declarator = 16
    RULE_assignment_exp = 17
    RULE_assignment_operator = 18
    RULE_condition_exp = 19
    RULE_expression = 20
    RULE_logicOr_exp = 21
    RULE_logicAnd_exp = 22
    RULE_inclu_exp = 23
    RULE_exclu_exp = 24
    RULE_and_exp = 25
    RULE_equal_exp = 26
    RULE_relation_exp = 27
    RULE_shift_exp = 28
    RULE_additive_exp = 29
    RULE_multi_exp = 30
    RULE_cast_exp = 31
    RULE_unary_exp = 32
    RULE_unary_operator = 33
    RULE_postfix_exp = 34
    RULE_argument_exp_List = 35
    RULE_primary_exp = 36
    RULE_args_type_List = 37
    RULE_args_declaration = 38
    RULE_initializer = 39
    RULE_initializerList = 40
    RULE_designation = 41
    RULE_designatorList = 42
    RULE_designator = 43
    RULE_constant_exp = 44
    RULE_func_declaration = 45
    RULE_func_declarator = 46
    RULE_func_definition = 47
    RULE_declarationList = 48
    RULE_comp_stmt = 49
    RULE_block_List = 50
    RULE_block_Item = 51
    RULE_statement = 52
    RULE_exp_stmt = 53
    RULE_select_stmt = 54
    RULE_iterate_stmt = 55
    RULE_for_stmt = 56
    RULE_for_start = 57
    RULE_for_step = 58
    RULE_for_end = 59
    RULE_quantum_gate_stmt = 60
    RULE_quantum_gate_operation = 61
    RULE_four_angle_args = 62
    RULE_alpha = 63
    RULE_beta = 64
    RULE_gamma = 65
    RULE_delta = 66
    RULE_theta = 67
    RULE_control_gate_exp = 68
    RULE_double_gate_exp = 69
    RULE_target_gate_exp = 70
    RULE_measurement_stmt = 71
    RULE_accept_cbit_stmt = 72
    RULE_q_if_operation = 73
    RULE_q_if_stmt = 74
    RULE_q_if_stmt_item = 75
    RULE_q_while_operation = 76
    RULE_q_while_stmt = 77
    RULE_q_while_stmt_item = 78
    RULE_q_condition = 79
    RULE_q_operator = 80

    ruleNames =  [ "qrunes", "lang_unit", "include_declaration", "include_sign", 
                   "postfix", "declaration", "literal_declaration", "declaration_Specifier", 
                   "literal_type", "primary_type", "quantum_type", "assist_classical_type", 
                   "init_DeclaratorList", "init_Literal_DeclaratorList", 
                   "init_Declarator", "init_Literal_Declarator", "declarator", 
                   "assignment_exp", "assignment_operator", "condition_exp", 
                   "expression", "logicOr_exp", "logicAnd_exp", "inclu_exp", 
                   "exclu_exp", "and_exp", "equal_exp", "relation_exp", 
                   "shift_exp", "additive_exp", "multi_exp", "cast_exp", 
                   "unary_exp", "unary_operator", "postfix_exp", "argument_exp_List", 
                   "primary_exp", "args_type_List", "args_declaration", 
                   "initializer", "initializerList", "designation", "designatorList", 
                   "designator", "constant_exp", "func_declaration", "func_declarator", 
                   "func_definition", "declarationList", "comp_stmt", "block_List", 
                   "block_Item", "statement", "exp_stmt", "select_stmt", 
                   "iterate_stmt", "for_stmt", "for_start", "for_step", 
                   "for_end", "quantum_gate_stmt", "quantum_gate_operation", 
                   "four_angle_args", "alpha", "beta", "gamma", "delta", 
                   "theta", "control_gate_exp", "double_gate_exp", "target_gate_exp", 
                   "measurement_stmt", "accept_cbit_stmt", "q_if_operation", 
                   "q_if_stmt", "q_if_stmt_item", "q_while_operation", "q_while_stmt", 
                   "q_while_stmt_item", "q_condition", "q_operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    PI=3
    LET=4
    INCLUDE=5
    INT=6
    FLOAT=7
    BOOLEAN=8
    IF=9
    ELSE=10
    FOR=11
    LIB_POSTFIX=12
    INC_POSTFIX=13
    QRUNES_POSTFIX=14
    VAR=15
    DOUBLE=16
    LEN=17
    HOST=18
    QVEC=19
    QUBIT=20
    CVEC=21
    CBIT=22
    H_GATE=23
    X_GATE=24
    NOT_GATE=25
    T_GATE=26
    S_GATE=27
    Y_GATE=28
    Z_GATE=29
    X1_GATE=30
    Y1_GATE=31
    Z1_GATE=32
    U4_GATE=33
    RX_GATE=34
    RY_GATE=35
    RZ_GATE=36
    CNOT_GATE=37
    CZ_GATE=38
    CR_GATE=39
    CU_GATE=40
    ISWAP=41
    MEASURE=42
    QIF=43
    QWHILE=44
    QELSE=45
    SHARP_SIGN=46
    ASSIGN=47
    GT=48
    LT=49
    BANG=50
    TILDE=51
    COLON=52
    EQUAL=53
    LE=54
    GE=55
    NOTEQUAL=56
    LOGIC_AND=57
    LOGIC_OR=58
    AND=59
    EXCLU=60
    INCLU=61
    QUE_MARK=62
    INC=63
    DEC=64
    ADD=65
    SUB=66
    MUL=67
    POW=68
    DIV=69
    MOD=70
    ADD_ASSIGN=71
    SUB_ASSIGN=72
    MUL_ASSIGN=73
    DIV_ASSIGN=74
    LSHIFT=75
    RSHIFT=76
    LBRACE=77
    RBRACE=78
    SEMI=79
    COMMA=80
    DOT=81
    LPAREN=82
    RPAREN=83
    LBRACK=84
    RBRACK=85
    Identifier=86
    Constant=87
    Digit_Sequence=88
    WhiteSpace=89
    SingleLineComment=90
    MultiLinesComment=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class QrunesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lang_unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qcodeParser.Lang_unitContext)
            else:
                return self.getTypedRuleContext(qcodeParser.Lang_unitContext,i)


        def getRuleIndex(self):
            return qcodeParser.RULE_qrunes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQrunes" ):
                listener.enterQrunes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQrunes" ):
                listener.exitQrunes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQrunes" ):
                return visitor.visitQrunes(self)
            else:
                return visitor.visitChildren(self)




    def qrunes(self):

        localctx = qcodeParser.QrunesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_qrunes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << qcodeParser.LET) | (1 << qcodeParser.INCLUDE) | (1 << qcodeParser.INT) | (1 << qcodeParser.FLOAT) | (1 << qcodeParser.DOUBLE) | (1 << qcodeParser.QVEC) | (1 << qcodeParser.QUBIT) | (1 << qcodeParser.CVEC) | (1 << qcodeParser.CBIT))) != 0) or _la==qcodeParser.Identifier:
                self.state = 162
                self.lang_unit()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lang_unitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_declaration(self):
            return self.getTypedRuleContext(qcodeParser.Include_declarationContext,0)


        def declaration(self):
            return self.getTypedRuleContext(qcodeParser.DeclarationContext,0)


        def literal_declaration(self):
            return self.getTypedRuleContext(qcodeParser.Literal_declarationContext,0)


        def func_declaration(self):
            return self.getTypedRuleContext(qcodeParser.Func_declarationContext,0)


        def func_definition(self):
            return self.getTypedRuleContext(qcodeParser.Func_definitionContext,0)


        def getRuleIndex(self):
            return qcodeParser.RULE_lang_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLang_unit" ):
                listener.enterLang_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLang_unit" ):
                listener.exitLang_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLang_unit" ):
                return visitor.visitLang_unit(self)
            else:
                return visitor.visitChildren(self)




    def lang_unit(self):

        localctx = qcodeParser.Lang_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lang_unit)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.include_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.literal_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                self.func_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 172
                self.func_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Include_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(qcodeParser.INCLUDE, 0)

        def include_sign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qcodeParser.Include_signContext)
            else:
                return self.getTypedRuleContext(qcodeParser.Include_signContext,i)


        def Identifier(self):
            return self.getToken(qcodeParser.Identifier, 0)

        def postfix(self):
            return self.getTypedRuleContext(qcodeParser.PostfixContext,0)


        def getRuleIndex(self):
            return qcodeParser.RULE_include_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_declaration" ):
                listener.enterInclude_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_declaration" ):
                listener.exitInclude_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_declaration" ):
                return visitor.visitInclude_declaration(self)
            else:
                return visitor.visitChildren(self)




    def include_declaration(self):

        localctx = qcodeParser.Include_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(qcodeParser.INCLUDE)
            self.state = 176
            self.include_sign()
            self.state = 177
            self.match(qcodeParser.Identifier)
            self.state = 178
            self.postfix()
            self.state = 179
            self.include_sign()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Include_signContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return qcodeParser.RULE_include_sign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_sign" ):
                listener.enterInclude_sign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_sign" ):
                listener.exitInclude_sign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_sign" ):
                return visitor.visitInclude_sign(self)
            else:
                return visitor.visitChildren(self)




    def include_sign(self):

        localctx = qcodeParser.Include_signContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include_sign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            _la = self._input.LA(1)
            if not(_la==qcodeParser.T__0 or _la==qcodeParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIB_POSTFIX(self):
            return self.getToken(qcodeParser.LIB_POSTFIX, 0)

        def INC_POSTFIX(self):
            return self.getToken(qcodeParser.INC_POSTFIX, 0)

        def QRUNES_POSTFIX(self):
            return self.getToken(qcodeParser.QRUNES_POSTFIX, 0)

        def getRuleIndex(self):
            return qcodeParser.RULE_postfix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfix" ):
                listener.enterPostfix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfix" ):
                listener.exitPostfix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfix" ):
                return visitor.visitPostfix(self)
            else:
                return visitor.visitChildren(self)




    def postfix(self):

        localctx = qcodeParser.PostfixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_postfix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << qcodeParser.LIB_POSTFIX) | (1 << qcodeParser.INC_POSTFIX) | (1 << qcodeParser.QRUNES_POSTFIX))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_DeclaratorList(self):
            return self.getTypedRuleContext(qcodeParser.Init_DeclaratorListContext,0)


        def SEMI(self):
            return self.getToken(qcodeParser.SEMI, 0)

        def declaration_Specifier(self):
            return self.getTypedRuleContext(qcodeParser.Declaration_SpecifierContext,0)


        def getRuleIndex(self):
            return qcodeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = qcodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << qcodeParser.INT) | (1 << qcodeParser.FLOAT) | (1 << qcodeParser.DOUBLE) | (1 << qcodeParser.QVEC) | (1 << qcodeParser.QUBIT) | (1 << qcodeParser.CVEC) | (1 << qcodeParser.CBIT))) != 0):
                self.state = 185
                self.declaration_Specifier()


            self.state = 188
            self.init_DeclaratorList(0)
            self.state = 189
            self.match(qcodeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Literal_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_Literal_DeclaratorList(self):
            return self.getTypedRuleContext(qcodeParser.Init_Literal_DeclaratorListContext,0)


        def SEMI(self):
            return self.getToken(qcodeParser.SEMI, 0)

        def literal_type(self):
            return self.getTypedRuleContext(qcodeParser.Literal_typeContext,0)


        def getRuleIndex(self):
            return qcodeParser.RULE_literal_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_declaration" ):
                listener.enterLiteral_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_declaration" ):
                listener.exitLiteral_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_declaration" ):
                return visitor.visitLiteral_declaration(self)
            else:
                return visitor.visitChildren(self)




    def literal_declaration(self):
